--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400;1,500&family=Righteous&display=swap');
+
+/* Global */
 
 body{
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2{
+    font-family: 'Righteous';
+}
+
+h2 {
+    font-size: 2.35rem;
+}
+
+p {
+    font-weight: 300;
+    font-size: 18px;
+}
+
+/* Background */
+
+section:nth-of-type(2n) {
+    background-color: #f2faf2;
+}
+
+/* Content */
+
+section {
+    padding: 100px;
+}
+
+article{
+    display: block;
+}
+
+.container{
+    max-width: 1140px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.inner-container{
+    max-width: 66%;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Jumbo */
+
+.banner{
+    width: 100%;
+    height: 60vh;
 }
