--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@ body{
 
 h1, h2{
     font-family: 'Righteous';
+    margin-top: 0;
 }
 
 h2 {
@@ -19,6 +20,7 @@ h2 {
 p {
     font-weight: 300;
     font-size: 18px;
+    margin-top: 0;
 }
 
 /* Background */
@@ -52,9 +54,30 @@ article{
     margin-right: auto;
 }
 
+.row{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 4rem;
+}
+
+.section-content{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+}
+
 /* Jumbo */
 
 .banner{
     width: 100%;
     height: 60vh;
 }
+
+/* ... */
+
+.img-styling {
+    max-width: 100%;
+    padding: 2rem;
+}
+
