--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,20 @@ article{
 
 .img-styling {
     max-width: 100%;
-    padding: 2rem;
+    margin: 2rem;
+    border-radius: 0.25rem;
+    box-shadow: 4px 4px 12px #555;
 }
 
+.tabPanel{
+    display: none;
+}
+
+.showcaseButton{
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 0.25rem;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+}
