--- a/styles/manouk.css
+++ b/styles/manouk.css
@@ -1,11 +1,10 @@
-
 /*background*/
 section:nth-of-type(2n) {
-    background-color: #f2faf2;
+    background-color: #FDF8F4;
 }
 
 h1,h2 {
-    color: #139A43;
+    color: #f1d0b7;
 }
 
 p {
@@ -14,7 +13,7 @@ p {
 
 .hero {
     text-align: center;
-    background-color: #139A43;
+    background-color: #f1d0b7;
     padding: 4rem 0;
 }
 
@@ -39,6 +38,6 @@ p {
 
 .showcaseButton:focus{
     background-color: white;
-    color: #139A43;
-    box-shadow: 0 0.375rem 0 #139A43;
+    color: #f1d0b7;
+    box-shadow: 0 0.375rem 0 #f1d0b7;
 }
