--- a/styles/brian.css
+++ b/styles/brian.css
@@ -42,3 +42,25 @@ p {
     color: #139A43;
     box-shadow: 0 0.375rem 0 #139A43;
 }
+
+
+/* Neon effect animatie */
+.cls-42 {
+    animation: glans 1s ease-in-out infinite;
+}
+
+
+@keyframes glans {
+    0% {
+        opacity: 0.7;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0.7;
+    }
+
+}
