--- a/styles/brian.css
+++ b/styles/brian.css
@@ -13,9 +13,13 @@ p {
 }
 
 .hero {
-    text-align: center;
-    background-color: #139A43;
-    padding: 4rem 0;
+    background-image: url('../images/brian.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 4rem;
+    width: 100%;
 }
 
 .bottom-border {
