--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,10 @@ body{
     padding: 0;
 }
 
+h1{
+    text-shadow: 2px 2px 8px #000;
+}
+
 h1, h2{
     font-family: 'Zilla Slab' , serif;
     margin-top: 0;
@@ -37,6 +41,7 @@ header{
     width: 100vw;
     margin: 0;
     display:flex;
+    justify-content: center;
 }
 
 /* Background */
@@ -83,6 +88,23 @@ article{
     flex-direction: column;
     align-items: left;
     justify-content: center;
+}
+
+/* nav */
+
+ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    flex-basis: auto;
+    justify-content: space-around;
+}
+
+li {
+    padding: 2rem;
 }
 
 /* Jumbo */
