banner background - nav changes

--- a/styles/ben.css
+++ b/styles/ben.css
@@ -13,7 +13,7 @@ p {
 }
 
 .hero {
-    background-image: url('../images/ben.svg');
+    background-image: url('../images/ben.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
