--- a/styles/kaylee.css
+++ b/styles/kaylee.css
@@ -13,7 +13,7 @@ p {
 }
 
 .hero {
-    background-image: url('../images/kaylee.svg');
+    background-image: url('../images/kaylee.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
