--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,10 @@ p {
     margin-top: 0;
 }
 
+a{
+        text-decoration: none;
+}
+
 header{
     display:flex;
 }
@@ -92,20 +96,44 @@ article{
 
 /* nav */
 
+.nav{
+    display: none;
+}
+
+
 ul {
     list-style-type: none;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     position: absolute;
     width: 100%;
     display: flex;
-    flex-basis: auto;
+    flex-direction: row;
     justify-content: space-around;
+    box-shadow: 0px 2px 12px black;
+}
+
+ul a{
+    width: 100%;
+    text-align: center;
 }
 
 li {
-    padding: 2rem;
+    color: black;
+    width: 100%;
+    margin: 0;
+    padding: 1.5rem 0;
+    font-family: 'Zilla Slab' , serif;
+    font-size: 1rem;
 }
+
+
+.sticky {
+    position: fixed;
+    display: block;
+    top: 0;
+  }
+
 
 /* Jumbo */
 
@@ -139,3 +167,4 @@ li {
 .buttonContainer{
     margin-top: 2rem;
 }
+
