--- a/styles/manouk.css
+++ b/styles/manouk.css
@@ -13,9 +13,12 @@ p {
 }
 
 .hero {
-    text-align: center;
-    background-color: #f1d0b7;
-    padding: 4rem 0;
+    background-image: url('../images/manouk.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 4rem;
 }
 
 .bottom-border {
