--- a/styles/rosa.css
+++ b/styles/rosa.css
@@ -47,3 +47,29 @@ p {
     color: #E0B1CB;
     box-shadow: 0 0.375rem 0 #E0B1CB;
 }
+
+
+#Print_kop{
+    animation: rotate 5s infinite linear; 
+    transform-origin: center;
+    transform-box: fill-box;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    20% {
+        transform: translateX(0.3em);;
+    }
+    40% {
+        transform: translateY(0.3em);;
+    }
+    20% {
+        transform: translateX(-0.2em);;
+        transform: translateY(-0.1em);;
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
