--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,15 @@ header{
     display:flex;
 }
 
+.parallax{
+	width: 100%;
+	height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+
 .headerWrapper{
     width: 100vw;
     margin: 0;
