--- a/styles/main.css
+++ b/styles/main.css
@@ -93,9 +93,15 @@ article{
 .row{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 4rem;
+    grid-column-gap: 2rem;
 }
 
+.row-lottie{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 2rem;
+    grid-row-gap: 4rem;
+}
 
 .section-content{
     display: flex;
