--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -52,3 +52,13 @@
     }
 }
 
+.huiskamer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transform: scale(1);
+  }
+  
+  
+
