Titel Home pagina

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -60,5 +60,13 @@
     transform: scale(1);
   }
   
-  
+  .Titel h1 {
+    top: 5%;
+    width: 100vw;
+    font-size: 7vw;
+    color: green;
+    position: absolute;
+    text-align: center;
+  }
+    
 
