--- a/styles/manouk.css
+++ b/styles/manouk.css
@@ -46,7 +46,7 @@ a{
     background-color: white;
 }
 
-.showcaseButton:focus {
+.showcaseButton.active {
     background-color: white;
     color: #f1d0b7;
     box-shadow: 0 0.375rem 0 #f1d0b7;
