--- a/styles/main.css
+++ b/styles/main.css
@@ -137,9 +137,10 @@ article{
 } */
 
 .menu {
+    padding: 0;
     margin: 0;
     position: fixed;
-    transform: translateX(-100%);
+    transform: translateX(-120%);
     transition: transform 0.2s;
     top: 0;
     left: 0;
@@ -149,14 +150,22 @@ article{
     background: white;
     color: white;
     list-style: none;
-    padding-top: 4rem;
+    padding-top: 8rem;
+    width: 20%;
+    box-shadow: 4px 0px 12px #8E8E8E;
+    opacity: 0.95;
 }
 
 #hamburger {
-    position: absolute;
+    position: fixed;
     top: 2rem;
     left: 2rem;
     z-index: 999;
+    border: none;
+    background-color: white;
+    padding: 0.75rem;
+    border-radius: 100%;
+    box-shadow: 0px 4px 4px lightgray;
 }
 
 .closeIcon {
@@ -170,6 +179,7 @@ article{
 ul a{
     width: 100%;
     text-align: center;
+    
 }
 
 li {
@@ -180,6 +190,8 @@ li {
     font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
 }
+
+
 
 /* Jumbo */
 
