--- a/styles/manouk.css
+++ b/styles/manouk.css
@@ -52,6 +52,12 @@ a{
     box-shadow: 0 0.375rem 0 #f1d0b7;
 }
 
+/* Nav */
+li:hover {
+    background-color: #f1d0b7;
+    color: white;
+}
+
 /* Vlam animatiw */
 
 #Vlam_Kaars {
